fixed logo spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -80,7 +80,7 @@ a.connectLink:hover {
   width: 100px;
   float: right;
   margin-right: -40%;
-  margin-top: -129px;
+  margin-top: -117px;
 }
 
 
